Relicensing to MIT-0

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ember-mobilehub-tester",
   "version": "0.0.0",
   "description": "Small description for ember-mobilehub-tester goes here",
-  "license": "MIT",
+  "license": "MIT-0",
   "author": "",
   "directories": {
     "doc": "doc",
